<resources>
    <string name="app_name">Charity App</string>
    <string name="login_text">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="register_here_text">Register Here</string>
    <string name="quot_hadith_text">\"Give charity without delay, for it  stands in the way of calamity.\"</string>
    <string name="reference_hadith_text">~Prophet Muhammad (P.B.U.H)~\n(Sahih al-tirmidhi)</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="address_hint">Address</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_donor_home">DonorHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_organization_activities">Organization Activities</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="pick_a_category">Pick a Category</string>
    <string name="donate_food">Donate Food</string>
    <string name="donate_clothes">Donate Clothes</string>
    <string name="donate_for_kids">Donate for Kids</string>
    <string name="donate_for_education">Donate for Education</string>
    <string name="donate_for_religion">Donate for Religion</string>
    <string name="others">Others</string>
    <string name="profile_image">Profile Image</string>
    <string name="sufyan_latif">Sufyan Latif</string>
    <string name="location_icon">Location Icon</string>
    <string name="miana_pura_sialkot">Miana Pura, Sialkot</string>
    <string name="more_list">More List</string>
    <string name="view_profile">View Profile</string>
    <string name="contact">Contact</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="view_history">View History</string>
    <string name="communicate">Communicate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="where_will_you_give_today">Where will you give today?</string>
    <string name="donate_now">Donate Now</string>
    <string name="view_record">View Record</string>
    <string name="enter_details">Enter Details</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="done">Done</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="amount_optional">Amount (Optional)</string>
    <string name="logout">Logout</string>
    <string name="no_donations_yet">No Donations Yet</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="account_information">Account Information</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_logo">App logo</string>
</resources>
