<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_organization_activities"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_organization_activities" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_donate" />
        <item
            android:id="@+id/nav_setReminder"
            android:icon="@drawable/ic_alarm_on_black_24dp"
            android:title="@string/set_reminder"/>
        <item
            android:id="@+id/nav_viewHistory"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/view_history"/>
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/menu_edit_profile" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
