<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_username"
        android:layout_marginStart="10dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#000"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/imgProfile"
        android:layout_marginStart="15dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sufyan_latif"
            android:textSize="25sp"
            android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/miana_pura_sialkot"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#45000000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/more_list" />
</RelativeLayout>