<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.SignupPersonalInfoFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Personal Information"
        android:textSize="25sp"
        android:textColor="#FF0808"
        android:textStyle="italic"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/fragment_background"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_layout_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_donor_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/first_name_hint"
                        android:drawableStart="@drawable/ic_username"
                        android:drawablePadding="20dp"
                        android:inputType="textCapWords"
                        android:padding="10dp"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_layout_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_layout_firstname">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_donor_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:drawableStart="@drawable/ic_username"
                        android:drawablePadding="20dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/last_name_hint"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_layout_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_layout_lastname">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_donor_contact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:background="@drawable/edit_text_background"
                        android:drawableStart="@drawable/ic_local_phone_black_24dp"
                        android:drawablePadding="20dp"
                        android:hint="@string/contact"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_layout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_layout_contact">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_donor_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_background"
                        android:drawableStart="@drawable/ic_location_on_black_24dp"
                        android:drawablePadding="20dp"
                        android:hint="@string/address_hint"
                        android:inputType="textPostalAddress"
                        android:padding="10dp"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/date_of_birth"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="20sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_dob"
                    app:layout_constraintStart_toStartOf="parent" />
                <TextView
                    android:id="@+id/tv_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dd_mm_yyyy"
                    android:textSize="20sp"
                    android:textColor="#353535"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/et_layout_address"
                    />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/gender"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dob" />

                <RadioGroup
                    android:id="@+id/gender_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gender">
                    <RadioButton
                        android:id="@+id/btn_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="20sp"
                        />
                    <RadioButton
                        android:id="@+id/btn_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="20sp"
                        android:layout_marginStart="15dp"
                        />
                </RadioGroup>
            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:weightSum="5">

                <Button
                    android:id="@+id/btn_donor_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/button_design"
                    android:text="@string/next"
                    android:textAllCaps="false" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_donor_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:background="@drawable/button_design"
                    android:text="@string/back"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>